--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.9.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@mui/x-data-grid": "^8.14.1",
+    "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
     "react": "^19.1.1",
