--- a/employee/package.json
+++ b/employee/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "@mui/x-data-grid": "^8.15.0",
+    "@mui/x-date-pickers": "^8.18.0",
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
+    "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
