--- a/employee/package.json
+++ b/employee/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
