--- a/admin/package.json
+++ b/admin/package.json
@@ -15,13 +15,18 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.14.1",
+    "@mui/x-date-pickers": "^7.3.4",
     "@reduxjs/toolkit": "^2.9.1",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.13",
     "firebase": "^12.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.5.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
